<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/home_color">


    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/headerLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="3.75"
            android:gravity="center"
            android:text="@string/Data_provided_by"
            android:textAlignment="center"
            android:textColor="@color/font_color"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:id="@+id/llTotalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llInfected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/infected"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/confirm"
                    android:textSize="16sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp" />

                <TextView
                    android:id="@+id/tv_infected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/confirm"
                    android:textSize="16sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDeath"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/death"
                    android:textAlignment="center"
                    android:textColor="@color/death"
                    android:textSize="16sp"
                    android:gravity="center"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp" />

                <TextView
                    android:id="@+id/tv_death"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/death"
                    android:textSize="16sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRecovered"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/recovered"
                    android:textAlignment="center"
                    android:textColor="@color/recover"
                    android:textSize="16sp"
                    android:gravity="center"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp" />

                <TextView
                    android:id="@+id/tv_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/recover"
                    android:textSize="16sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLinearLayout">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1.1"
            android:minLines="1"
            android:text="@string/country"
            android:textAlignment="textStart"
            android:textColor="@color/font_color"
            android:textSize="16sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="10sp" />

        <TextView
            android:id="@+id/tvCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.6"
            android:minLines="1"
            android:text="@string/confirm"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:textColor="@color/font_color"
            android:textSize="16sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="10sp" />

        <TextView
            android:id="@+id/tvDeathCase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.6"
            android:minLines="1"
            android:text="@string/death"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textColor="@color/font_color"
            android:textSize="16sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="10sp" />

        <TextView
            android:id="@+id/tvRecoverCase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.6"
            android:minLines="1"
            android:text="@string/recover"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textColor="@color/font_color"
            android:textSize="16sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="10sp" />
    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allCounties_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/no_connectionLayout"
        android:layout_width="347dp"
        android:layout_height="154dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/connection" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

