<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/home_color"
    tools:context=".ui.history.HistoryFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/historySwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="Choose country : "
                        android:textColor="@color/font_color"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/font_color"
                        android:padding="5dp"
                        android:textColor="@color/font_color"

                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:fontFamily="serif"
                        android:text="@string/choose_date"
                        android:textColor="@color/font_color"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="3">


                        <ImageButton
                            android:id="@+id/dateTxt"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:background="@drawable/ic_calendar"
                            android:textStyle="bold"
                            android:paddingTop="10dp"/>

                        <TextView
                            android:id="@+id/showDateTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:textColor="@color/font_color"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>



                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/line"
                    android:clickable="true"
                    android:text="@android:string/search_go"
                    android:textColor="@color/colorPrimary"
                    android:focusable="true" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="@color/card"
                    app:cardCornerRadius="10dp"
                    android:visibility="invisible"
                 >

                    <LinearLayout
                        android:id="@+id/CardLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:weightSum="5">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/new_cases"
                                android:textColor="@color/confirm"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/new_deaths"
                                android:textColor="@color/death"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/total_cases_history"
                                android:textColor="@color/confirm"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/total_deaths_history"
                                android:textColor="@color/death"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/total_recovered_history"
                                android:textColor="@color/recover"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:weightSum="5">

                            <TextView
                                android:id="@+id/newCasesTxt"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:textColor="@color/confirm"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/newDeathsTxt"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:textColor="@color/death"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/totalTxt"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/confirm"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/deathTxt"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:textColor="@color/death"
                                android:textSize="18sp" />


                            <TextView
                                android:id="@+id/recoverdTxt"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:textColor="@color/recover"
                                android:textSize="18sp" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <LinearLayout
        android:id="@+id/no_connection"
        android:layout_width="347dp"
        android:layout_height="154dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/connection" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>